# talent-gpt

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
config/: .gitignore
data/: .gitignore  pdf.dvc  txt.dvc
talent_gpt/: schema.py  schema_experience.py  schema_skill.py
talent_gpt/extract/: experience.py  skill.py
tests/: test_experience.py
