[tool.poetry]
name = "talent-gpt"
version = "0.1.0"
description = "Resume review"
authors = ["Author Name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
langchain = "^0.3.17"
langchain-openai = "^0.3.6"
opik = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
dvc-gdrive = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
